<resources>

    <string name="app_name">SPEAR</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="teleop">Tele-operation</string>
    <string name="near">Come near</string>
    <string name="panel">Fix Panel</string>
    <string name="stop">Stop</string>
    <string name="abort">Abort</string>
    <string name="dive">Dive</string>
    <string name="goTo">Goto</string>
    <string name="decelerate">Decelerate</string>
    <string name="erase">Erase Last</string>
    <string name="eraseAll">Erase All</string>

    <string name="start">Start</string>
    <string name="surface">Surface</string>
    <string name="station">Keep Station</string>
    <string name="startplan">Choose plan</string>
    <string name="choice_prompt">Select a choice</string>
    <string name="acc">Accelerate</string>
    <string name="speed">Speed Value </string>
    <string name="duration">Duration Value</string>
    <string name="radius">Radius Value</string>
    <string name="depth">Depth Value</string>
    <string name="altitude">Altitude Value</string>

    <string name="width">Swath Width</string>
    <string name="pref_speed_key" translatable="false">speed</string>
    <string name="pref_speed_default" translatable="false">1300</string>
    <string name="pref_duration_key" translatable="false">duration</string>
    <string name="pref_duration_default" translatable="false">0</string>
    <string name="pref_radius_key" translatable="false">radius</string>
    <string name="pref_radius_default" translatable="false">10</string>
    <string name="pref_depth_key" translatable="false">depth</string>
    <string name="pref_depth_default" translatable="false">5</string>
    <string name="pref_altitude_key" translatable="false">altitude</string>
    <string name="pref_altitude_default" translatable="false">5</string>
    <string name="pref_width_key" translatable="false">swath width</string>
    <string name="pref_width_default" translatable="false">25</string>
    <string name="pref_show_rpmms_label" translatable="false">Speed Control</string>
    <string name="pref_show_depth_label" translatable="false">Z Control </string>
    <string name="pref_show_offline_label" translatable="false">Map Tiles - Offline </string>
    <string name="pref_show_offline_key" translatable="false">Offline</string>
    <string name="pref_show_offtrue" translatable="false">Offline</string>
    <string name="pref_show_offfalse" translatable="false">Online</string>
    <string name="pref_show_rpmms_key" translatable="false">speedControl</string>
    <string name="pref_show_depth_key" translatable="false">zControl</string>

    <string name="sms"> Send via SMS</string>
    <string name="edit">Line or Area to follow</string>
    <string name="iridium">Iridium</string>
    <string name="pos">Pos</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="area">Area to follow</string>
    <string name="line">Line to follow</string>
    <string name="wifion">wifion</string>
    <string name="wifioff">wifioff</string>
    <string name="patternMessageReceived">\\((.)\\) \\((.*)\\) (.*) / (.*), (.*) / .*</string>
    <string name="list_of_vehicles">List of Vehicles</string>
    <string name="lauv_seacon_2">lauv-seacon-2</string>
    <string name="lauv_seacon_3">lauv-seacon-3</string>
    <string name="lauv_xtreme_2">lauv-xtreme-2</string>
    <string name="lauv_noptilus_1">lauv-noptilus-1</string>
    <string name="lauv_noptilus_2">lauv-noptilus-2</string>
    <string name="lauv_noptilus_3">lauv-noptilus-3</string>
    <string name="lauv_xplore_1">lauv-xplore-1</string>
    <string name="lauv_xplore_2">lauv-xplore-2</string>
    <string name="lauv_xplore_3">lauv-xplore-3</string>
    <string name="lauv_xplore_4">lauv-xplore-4</string>
    <string name="lauv_xplore_5">lauv-xplore-5</string>
    <string name="lauv_nemo">lauv-nemo-1</string>
    <string name="depthstring">Dpth:</string>
    <string name="speedstring">Spd:</string>
    <string name="meterspersecond">m/s</string>
    <string name="connectedvehicles">ConnectedVehicles</string>
    <string name="plan">Plan</string>
    <string name="start_plan">Start Plan</string>
    <string name="preview">Preview</string>
    <string name="choose_vehicle">Tap here to choose a vehicle</string>
    <string name="show_ais">AIS Positions</string>
    <string name="ripples_position">Ripples Positions</string>
    <string name="compass">Compass</string>
    <string name="heading_0_0">Heading: 0.0</string>
    <string name="distance_0_0">Distance: 0.0</string>
    <string name="dist">Distance</string>
    <string name="head">Heading</string>
    <string name="met">meters</string>
    <string name="deg">degrees</string>
    <string name="follow_me">Follow Me</string>
    <string name="name">Name</string>
    <string name="bearing">Bearing:</string>
    <string name="test">TEST</string>
    <string name="system_interactions">System Interactions</string>
    <string name="unlock_map">Unlock Map</string>
    <string name="errors_list">Errors List</string>
    <string name="no_error">No Entities in Error</string>
    <string name="refresh">Refresh</string>
    <string name="download_tiles">Download Tiles</string>
</resources>
