<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_offline_default"
        android:key="@string/pref_show_offline_key"
        android:summaryOff="@string/pref_show_offfalse"
        android:summaryOn="@string/pref_show_offtrue"
        android:title="@string/pref_show_offline_label" />

    <ListPreference
        android:key="@string/pref_show_rpmms_key"
        android:defaultValue="RPM"
        android:entries="@array/pref_rpmms_names"
        android:entryValues="@array/pref_show_rpmms_values"
        android:summary="Choose Speed Control"
        android:title="@string/pref_show_rpmms_label" />


    <EditTextPreference
        android:defaultValue="@string/pref_speed_default"
        android:key="@string/pref_speed_key"
        android:singleLine="true"
        android:title="@string/speed" />

    <EditTextPreference
        android:defaultValue="@string/pref_duration_default"
        android:key="@string/pref_duration_key"
        android:singleLine="true"
        android:title="@string/duration" />

    <EditTextPreference
        android:defaultValue="@string/pref_radius_default"
        android:key="@string/pref_radius_key"
        android:singleLine="true"
        android:title="@string/radius" />


    <ListPreference
        android:defaultValue="Depth"
        android:key="@string/pref_show_depth_key"

        android:entries="@array/pref_depth_names"

        android:entryValues="@array/pref_depth_values"
        android:summary="Choose Z Control"

        android:title="@string/pref_show_depth_label" />


    <EditTextPreference
        android:defaultValue="@string/pref_depth_default"
        android:key="@string/pref_depth_key"
        android:singleLine="true"
        android:title="@string/depth" />
    <EditTextPreference
        android:defaultValue="@string/pref_altitude_default"
        android:key="@string/pref_altitude_key"
        android:singleLine="true"
        android:title="@string/altitude" />
    <EditTextPreference
        android:defaultValue="@string/pref_width_default"
        android:key="@string/pref_width_key"
        android:singleLine="true"
        android:title="@string/width" />


</PreferenceScreen>