<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/ais"
        android:orderInCategory="100"
        android:title="@string/show_ais"
        app:showAsAction="never"/>

    <item
        android:id="@+id/ripples"
        android:orderInCategory="100"
        android:title="@string/ripples_position"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sysinter"
        android:orderInCategory="100"
        android:title="@string/system_interactions"
        app:showAsAction="never"/>

    <item
        android:id="@+id/followme"
        android:orderInCategory="100"
        android:title="@string/follow_me"
        app:showAsAction="never"/>
</menu>
