<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:background="#00FFFFFF"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="356dp"
        android:layout_gravity="center"
        android:layout_margin="5dp">

        <RadioButton
            android:id="@+id/pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/pos" />

        <RadioButton
            android:id="@+id/diveRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="false"
            android:text="@string/dive" />

        <RadioButton
            android:id="@+id/stationKeepingRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/station" />

        <RadioButton
            android:id="@+id/abortRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/abort" />

        <RadioButton
            android:id="@+id/surfaceRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/surface" />

        <RadioButton
            android:id="@+id/gotoRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/goTo" />

        <RadioButton
            android:id="@+id/sendPlanRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/plan" />

        <RadioButton
            android:id="@+id/startPlanRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/start_plan" />


    </RadioGroup>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:text="@string/sms" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/button3"
            android:layout_toRightOf="@+id/button3"
            android:text="@string/iridium" />
    </RelativeLayout>



</LinearLayout>