<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TextView
        android:id="@+id/area"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:onClick="area"
        android:text="@string/area"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:onClick="line"
        android:text="@string/line"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sms"
        android:layout_width="364dp"
        android:layout_height="40dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentLeft="true"
        android:onClick="sms"
        android:text="@string/sms"
        android:textColor="#000000"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="138dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/compass"
        android:layout_width="364dp"
        android:layout_height="40dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_alignParentStart="true"
        android:onClick="compass"
        android:text="@string/compass"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="196dp"
        android:visibility="visible" />


</RelativeLayout>
