<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomsheet"
    android:layout_width="match_parent"
    android:layout_height="253dp"
    android:layout_alignParentBottom="true"
    android:background="#F3F3F3"
    android:orientation="vertical"
    android:paddingBottom="@dimen/inbetween_space"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/inbetween_space"
    app:behavior_hideable="false"
    app:behavior_peekHeight="253dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bs_item_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="500dp"
            android:layout_height="40dp"
            android:background="#a9a9a9"
            android:id="@+id/servicebar"
            android:textSize="25sp"
            android:onClick="onClick"
            android:clickable="true"
            android:textColor="#FFFFFF"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/imageView" />


        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/wifi"
            android:id="@+id/imageView"

            android:layout_marginLeft="11dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/imageView2"
            android:layout_alignLeft="@+id/imageView2" />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/nowifi"
            android:id="@+id/imageView2"
            android:fitsSystemWindows="true"
            android:layout_marginLeft="11dp"
            android:layout_marginEnd="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="36dp"
            android:layout_alignParentRight="true" />


    </RelativeLayout>
    <RelativeLayout
        android:orientation="vertical"

        android:layout_height="230dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"


        >
        <Button
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:text="@string/teleop"
            android:background="@drawable/teleopbutton"
            android:textColor="#ffffff"
            android:id="@+id/teleop"
            android:onClick="Teleop"
            android:textSize="12sp"
            android:layout_margin="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/near"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:background="@drawable/commandbutton"
            android:onClick="near"
            android:text="@string/near"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:layout_margin="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="11dp"/>


        <Button
            android:id="@+id/stop"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:onClick="Stop"
            android:text="@string/stop"
            android:textColor="#ffffff"
            android:background="@drawable/stopbutton"
            android:textSize="12sp"
            android:layout_below="@+id/startplan"
            android:layout_alignLeft="@+id/startplan"
            android:layout_alignStart="@+id/startplan"
            android:layout_marginTop="11dp" />




        <TextView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:id="@+id/velocity"
            android:textColor="#8B0000"
            android:textSize="16sp"
            android:layout_alignBaseline="@+id/startplan"
            android:layout_alignBottom="@+id/startplan"
            android:layout_centerHorizontal="true" />






        <Button
            android:id="@+id/dive"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:background="@drawable/commandbutton"
            android:onClick="Dive"
            android:text="@string/dive"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:layout_alignBaseline="@+id/stop"
            android:layout_alignBottom="@+id/stop"
            android:layout_alignLeft="@+id/KeepStation"
            android:layout_alignStart="@+id/KeepStation" />

        <Button
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:text="@string/station"
            android:textColor="#ffffff"
            android:id="@+id/KeepStation"
            android:onClick="keepStation"
            android:background="@drawable/commandbutton"
            android:textSize="12sp"
            android:layout_below="@+id/teleop"
            android:layout_alignLeft="@+id/near"
            android:layout_alignStart="@+id/near" />


        <Button
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:text="@string/startplan"
            android:textColor="#ffffff"
            android:id="@+id/startplan"
            android:onClick="start"
            android:background="@drawable/commandbutton"
            android:textSize="12sp"
            android:layout_below="@+id/teleop"
            android:layout_alignLeft="@+id/teleop"
            android:layout_alignStart="@+id/teleop" />

        <com.example.nachito.spear.StopTeleop
            android:id="@+id/stopTeleop"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:onClick="onClick"
            android:text="@string/stop"
            android:textColor="#ffffff"
            android:background="@drawable/stopbutton"
            android:textSize="12sp"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_alignBottom="@+id/joystick"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/decelerate"
            android:layout_alignEnd="@+id/decelerate"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="Stop"
            android:layout_marginTop="20dp"
            android:id="@+id/textView5"
            android:layout_alignTop="@+id/stopTeleop"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp" />



        <com.example.nachito.spear.Accelerate
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="@drawable/commandbutton"
            android:id="@+id/accelerate"
            android:textSize="14sp"
            android:layout_marginTop="3dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/acc"
            android:layout_marginRight="31dp"
            android:layout_marginTop="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/accelerate"
            android:layout_alignEnd="@+id/accelerate"
            android:layout_marginEnd="31dp"
            android:id="@+id/textView4"/>

        <com.example.nachito.spear.Decelerate
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="decelerate"
            android:textColor="#ffffff"
            android:id="@+id/decelerate"
            android:background="@drawable/commandbutton"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/accelerate"
            android:layout_alignLeft="@+id/accelerate"
            android:layout_alignStart="@+id/accelerate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="Decelerate"
            android:layout_alignTop="@+id/decelerate"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_marginTop="14dp"/>
        <com.example.nachito.spear.Joystick
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:id="@+id/joystick"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="50dp" />


    </RelativeLayout>

</LinearLayout>


